[add]サンプルファイル追加

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,9 @@
 // ==========================================================================
 // component
 // ==========================================================================
+@use "./object/component/heading";
 
 // ==========================================================================
 // project
 // ==========================================================================
+@use "./object/project/mv";
